index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply text-center;
    @apply md:text-left;
  }

  h1 {
    @apply text-5xl;
    @apply md:text-6xl;
    @apply my-10;
    @apply md:my-12;
  }

  h2 {
    @apply text-2xl;
    @apply md:text-3xl;
    @apply font-mono;
    @apply pb-1;
    @apply md:pb-0;
  }

  a {
    @apply font-light;
    @apply hover:underline;
  }

  section {
    @apply bg-black/30;
    @apply backdrop-blur-sm;
    @apply backdrop-brightness-200;
    @apply px-4;
    @apply md:px-10;
    @apply py-6;
    @apply my-8;
    @apply rounded-lg;
    @apply md:text-2xl;
  }

  ul {
    @apply md:list-disc;
    @apply pl-0;
    @apply md:pl-7;
  }

  li {
    @apply pt-6;
    @apply pl-0;
    @apply text-lg;
    @apply md:pl-1;
  }

  /* span {
    @apply text-sm;
    @apply block;
    @apply md:text-2xl;
    @apply md:inline;
  } */
}

/* WebGL Styles */
canvas#webgl {
  position: fixed;
  top: 0;
  left: 0;
  outline: none;
  mix-blend-mode: exclusion;
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100vh;
}

body {
  background-color: #181818;
  overflow-x: hidden;
  color: white;
}

/* Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: #393939 rgb(122, 117, 117);
}

/* Chrome, Edge and Safari */
*::-webkit-scrollbar {
  width: 12px;
}

*::-webkit-scrollbar-track {
  background: #393939;
}

*::-webkit-scrollbar-thumb {
  background-color: #7a7575;
  border-radius: 20px;
  border: 3px solid #393939;
}

/* SOURCE CODE PRO */
@font-face {
  font-family: "Source Code Pro";
  src: local("Source Code Pro"),
    url("/fonts/SourceCodePro/SourceCodePro-Light.ttf");
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Source Code Pro";
  src: local("Source Code Pro"),
    url("/fonts/SourceCodePro/SourceCodePro-Medium.ttf");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Source Code Pro";
  src: local("Source Code Pro"),
    url("/fonts/SourceCodePro/SourceCodePro-Bold.ttf");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Source Code Pro";
  src: local("Source Code Pro"),
    url("/fonts/SourceCodePro/SourceCodePro-Black.ttf");
  font-weight: 900;
  font-style: normal;
  font-display: swap;
}

/* ROBOTO */
@font-face {
  font-family: "Roboto";
  src: local("Roboto"), url("/fonts/Roboto/Roboto-Light.ttf");
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Roboto";
  src: local("Roboto"), url("/fonts/Roboto/Roboto-Regular.ttf");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Roboto";
  src: local("Roboto"), url("/fonts/Roboto/Roboto-Medium.ttf");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Roboto";
  src: local("Roboto"), url("/fonts/Roboto/Roboto-Bold.ttf");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Roboto";
  src: local("Roboto"), url("/fonts/Roboto/Roboto-Black.ttf");
  font-weight: 900;
  font-style: normal;
  font-display: swap;
}

